src/assets/styles/_global.scss
html {
  scroll-behavior: smooth;
}
body {
  margin: 0;
  font-family: $global-font-family;
  min-width: 480px;
}
strong {
}
ol,
ul {
  margin: 0 0 $global-margin * 2 $global-margin * 2;
  padding: 0;
}
li {
  margin-bottom: $global-margin/2;
}
img {
  max-width: 100%;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
  margin: 0 0 $global-margin * 2 0;
  width: 100%;
  border: $global-border;
}
table tr {
}
table td,
table th {
  border: $global-border;
  padding: $global-padding/2;
}
pre {
  margin-bottom: $global-margin * 2;
}
hr {
  border-bottom: $global-border;
}

.responsive-table {
  max-width: 100%;
  overflow-x: auto;
}
.mat-toolbar.mat-accent {
  margin-bottom: 30px;
}

::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

.mat-drawer {
  width: 60%;
}

::ng-deep .mat-drawer-container {
  padding-top: 15px;
  min-height: 100% !important;
}

::ng-deep .mat-drawer-content {
  overflow-y: inherit !important;
}
.mat-drawer-inner-container {
  margin-top: 20px;
}
.mat-drawer-inner-container .mat-button {
  min-height: 55px;
  font-size: 20px;
  text-align: left;
  padding: 10px;
  margin: 0 20px;
}

.header {
  height: 100%;
  min-height: 100vh;
}

@media (max-width: $tablet) {
  .mat-toolbar.mat-accent {
    margin-bottom: 0;
  }
  .mat-toolbar.mat-accent.mat-toolbar-single-row div:nth-child(2) {
    flex: auto;
  }
  ::ng-deep .mat-drawer-container {
    min-height: 100vh !important;
    height: 100vh !important;
  }
  .header {
    height: 100vh !important;
  }
}

